deploy/kubernetes/core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core
spec:
  selector:
    app.kubernetes.io/name: hekatoncheiros-core
  ports:
    - name: http
      port: 3000
      targetPort: http
