deploy/kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app.kubernetes.io/name: hekatoncheiros-web
  ports:
    - name: http
      port: 80
      targetPort: http
